--- a/src/layouts/Header/index.module.scss
+++ b/src/layouts/Header/index.module.scss
@@ -1,8 +1,32 @@
 @use "@/styles/index" as *;
 
-.h1{
-  font-size: 3rem;
-  color: $foreground;
-  font-weight: 600;
-  margin-bottom: 1rem;
+.header {
+    background-color: $background;
+    
+    &__inner {
+      position: relative;
+      z-index: 50;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    &__title {
+        position: relative;
+        z-index: 10;
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+        font-weight: 400;
+        color: $primary;
+    }
+
+    &__md {
+      display: none;
+
+      @include media(md) {
+          display: block;
+      }
+    }
 }
