fix: ヘッダーコンポーネントの完成（#4）

--- a/src/layouts/Header/index.module.scss
+++ b/src/layouts/Header/index.module.scss
@@ -2,6 +2,8 @@
 
 .header {
     background-color: $background;
+    margin-left: 0;
+    margin-top: 0.875rem;
     
     &__inner {
       position: relative;
@@ -10,6 +12,10 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem;
+
+      @include media(sm) {
+          margin: 0 1rem;
+      }
     }
 
     &__title {
@@ -20,13 +26,5 @@
         font-size: 1.2rem;
         font-weight: 400;
         color: $primary;
-    }
-
-    &__md {
-      display: none;
-
-      @include media(md) {
-          display: block;
-      }
     }
 }
