--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,12 +16,12 @@ $destructive: hsl(0, 84.2%, 60.2%);
 $destructive-foreground: hsl(210, 40%, 98%);
 $border: hsl(214.3, 31.8%, 91.4%);
 $input: hsl(214.3, 31.8%, 91.4%);
-$ring: hsl(222.2, 84%, 4.9%);
-$chart-1: hsl(12, 76%, 61%);
-$chart-2: hsl(173, 58%, 39%);
-$chart-3: hsl(197, 37%, 24%);
-$chart-4: hsl(43, 74%, 66%);
-$chart-5: hsl(27, 87%, 67%);
+$swagger: hsl(183, 54%, 47%);
+$get: #61affe;
+$post: #49cc90;
+$put: #fca130;
+$delete: #f93e3e;
+$patch: #50e3c2;
 $radius: 0.5rem;
 $highlight: hsl(240, 60.8%, 40%);
   
@@ -45,11 +45,12 @@ $dark-theme: (
   border: hsl(217.2, 32.6%, 17.5%),
   input: hsl(217.2, 32.6%, 17.5%),
   ring: hsl(212.7, 26.8%, 83.9%),
-  chart-1: hsl(220, 70%, 50%),
-  chart-2: hsl(160, 60%, 45%),
-  chart-3: hsl(30, 80%, 55%),
-  chart-4: hsl(280, 65%, 60%),
-  chart-5: hsl(340, 75%, 55%),
+  swagger: hsl(160, 60%, 45%),
+  get: #61affe,
+  post: #49cc90,
+  put: #fca130,
+  delete: #f93e3e,
+  patch: #50e3c2,
   radius: 0.5rem,
   highlight: hsl(240, 70.8%, 60%),
 );
