--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -10,7 +10,7 @@
 
 .swaggerLink {
   color:$swagger;
-  font-weight: 520;
+  font-weight: 400;
   transition: color 0.2s ease;
   margin-right : 0.25rem;
   
@@ -19,134 +19,135 @@
   }
 }
 
-.section__pagetitle {
-  padding-top: 8rem;
-  padding-bottom: 14rem;
-  margin: 0 auto;
-  max-width: 80rem;
-  width: 100%;
-  height: 100%;
+.section {
+  &__pagetitle {
+    padding-top: 8rem;
+    padding-bottom: 14rem;
+    margin: 0 auto;
+    max-width: 80rem;
+    width: 100%;
+    height: 100%;
 
-  &__inner {
-    text-align: center;
-    padding: 1rem;
-    margin-bottom: 2rem;
-  }
+    &__inner {
+      text-align: center;
+      padding: 1rem;
+      margin-bottom: 2rem;
+    }
 
-  &__title {
-    font-size: 2.125rem;
-    font-weight: bold;
-    color: $primary;
+    &__title {
+      font-size: 2.125rem;
+      font-weight: bold;
+      color: $primary;
 
-    @include media(sm) {
-      font-size: 2.5rem;
+      @include media(sm) {
+        font-size: 2.5rem;
+      }
+    }
+
+    &__subtitle {
+      font-size: 1rem;
+      font-weight: 550;
+      color: $primary;
+
+      @include media(sm) {
+        font-size: 1.125rem;
+      }
     }
   }
 
-  &__subtitle {
-    font-size: 1rem;
-    font-weight: 550;
-    color: $primary;
+  &__overview {
+    padding: 4rem 0;
 
-    @include media(sm) {
-      font-size: 1.125rem;
+    &__inner {
+      text-align: center;
+      padding: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    &__title {
+      font-size: 2rem;
+      font-weight: bold;
+      color: $primary;
+
+      @include media(sm) {
+        font-size: 2.25rem;
+      }
+    }
+
+    &__subtitle {
+      font-size: 0.875rem;
+      font-weight: 400;
+      color: $primary;
+
+      @include media(sm) {
+        font-size: 1rem;
+      }
+    }
+
+    &__description {
+      font-size: 0.9rem;
+      font-weight: 350;
+      color: $muted-foreground;
+      margin-top: 1rem;
+      line-height: 2;
+
+      @include media(sm) {
+        font-size: 1rem;
+      }
+    }
+
+    &__list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+    }
+
+    &__item {
+      list-style: none;
+    }
+
+    &__destructive {
+      color: $destructive;
     }
   }
-}
 
-.section__overview {
-  padding: 4rem 0;
+  &__reference {
+    padding: 4rem 0;
 
-  &__inner {
-    text-align: center;
-    padding: 1rem;
-    margin-bottom: 2rem;
-  }
+    &__inner {
+      text-align: start;
+      padding: 1rem 0;
+    }
 
-  &__title {
-    font-size: 2rem;
-    font-weight: bold;
-    color: $primary;
+    &__title {
+      font-size: 2rem;
+      font-weight: bold;
+      color: $primary;
 
-    @include media(sm) {
+      @include media(sm) {
       font-size: 2.25rem;
+      }
     }
-  }
 
-  &__subtitle {
-    font-size: 0.875rem;
-    font-weight: 400;
-    color: $primary;
+    &__subtitle {
+      font-size: 0.875rem;
+      font-weight: 400;
+      color: $primary;
 
-    @include media(sm) {
-      font-size: 1rem;
+      @include media(sm) {
+        font-size: 1rem;
+      }
     }
-  }
 
-  &__description {
-    font-size: 0.9rem;
-    font-weight: 350;
-    color: $muted-foreground;
-    margin-top: 1rem;
-    line-height: 2;
+    &__description {
+      font-size: 0.9rem;
+      font-weight: 350;
+      color: $muted-foreground;
+      line-height: 2;
 
-    @include media(sm) {
-      font-size: 1rem;
-    }
-  }
-
-  &__list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1.5rem;
-
-  }
-
-  &__item {
-    list-style: none;
-  }
-
-  &__destructive {
-    color: $destructive;
-  }
-}
-
-.section__reference {
-  padding: 4rem 0;
-
-  &__inner {
-    text-align: start;
-    padding: 1rem 0;
-  }
-
-  &__title {
-    font-size: 2rem;
-    font-weight: bold;
-    color: $primary;
-
-    @include media(sm) {
-      font-size: 2.25rem;
-    }
-  }
-
-  &__subtitle {
-    font-size: 0.875rem;
-    font-weight: 400;
-    color: $primary;
-
-    @include media(sm) {
-      font-size: 1rem;
-    }
-  }
-
-  &__description {
-    font-size: 0.9rem;
-    font-weight: 350;
-    color: $muted-foreground;
-    line-height: 2;
-
-    @include media(sm) {
-      font-size: 1rem;
+      @include media(sm) {
+        font-size: 1rem;
+      }
     }
   }
 }
