refactor: コンポーネントの構造を改善し、アクセシビリティを向上

--- a/src/components/ChangelogSection/index.module.scss
+++ b/src/components/ChangelogSection/index.module.scss
@@ -39,9 +39,8 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    list-style: none;
+    padding: 0;
     margin: 2rem auto;
 
     @include media(md) {
