refactor: リンクコンポーネントの型定義を改善し、スタイルを調整

--- a/src/components/Link/index.module.scss
+++ b/src/components/Link/index.module.scss
@@ -6,9 +6,10 @@
   font-size: 0.8rem;
   font-weight: normal;
   color: $muted-foreground;
+  text-decoration: none;
 
   &:hover {
-      color: $primary;
+    color: $primary;
   }
 }
 
