--- a/src/layouts/index.module.scss
+++ b/src/layouts/index.module.scss
@@ -14,17 +14,14 @@
   max-width: 80rem;
   width: 100%;
   height: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 0 1rem;
 
   @include media(sm) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding: 0 1.5rem;
   }
 
   @include media(lg) {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 0 2rem;
   }
 }
 
