--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -5,7 +5,9 @@
 }
 
 .border {
-  border-top: 1px solid $border;
+  border: none;
+  height: 1px;
+  background-color: $border;
 }
 
 .swaggerLink {
@@ -16,17 +18,17 @@
   
   &:hover {
     color:teal;
+    outline: none;
   }
 }
 
 .section {
   &__pagetitle {
-    padding-top: 8rem;
-    padding-bottom: 14rem;
+    padding-top: 11rem;
+    padding-bottom: 11rem;
     margin: 0 auto;
     max-width: 80rem;
     width: 100%;
-    height: 100%;
 
     &__inner {
       text-align: center;
@@ -115,7 +117,7 @@
     padding: 4rem 0;
 
     &__inner {
-      text-align: start;
+      text-align: left;
       padding: 1rem 0;
     }
 
