style: スタイルを微調整

--- a/src/components/Section/PageTitleSection/index.module.scss
+++ b/src/components/Section/PageTitleSection/index.module.scss
@@ -39,6 +39,7 @@
   font-weight: semibold;
   transition: all 0.2s ease-in-out;
   color: $primary-foreground;
+  margin-top: 4rem;
 
   &:hover {
     background-color: $highlight;
